# bazel-kt-hilt-demo

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
app/: AndroidManifest.xml  BUILD.bazel  DemoApplication.kt  MainActivity.kt
app/res/layout/: activity_main.xml
