load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")

android_binary(
    name = "app",
    manifest = "AndroidManifest.xml",
    manifest_values = {
        "versionName": "2023.09.20",
        "versionCode": "1",
        "applicationId": "com.example.demo",
    },
    deps = [
        ":lib",
    ],
)

kt_android_library(
    name = "lib",
    srcs = glob(["*.kt"]),
    custom_package = "com.example.demo",
    manifest = "AndroidManifest.xml",
    resource_files = glob(["res/**"]),
    deps = [
        "//:hilt-android",
        "@maven//:androidx_appcompat_appcompat",
    ],
)
